--- a/src/HRApp/HRApp/ClientApp/src/app/app.component.html
+++ b/src/HRApp/HRApp/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-nav-menu *ngIf="!pageService.data.hideHeader && authService.user"></app-nav-menu>
+  <app-nav-menu *ngIf="authService.user && !pageService.data.hideHeader"></app-nav-menu>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
