--- a/src/HRApp/HRApp/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/HRApp/HRApp/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class='navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3'>
-    <div class="container">
+    <div class="container py-0">
       <a class="navbar-brand" [routerLink]='["/"]'>HR App</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
         [attr.aria-expanded]="isExpanded" (click)="toggle()">
@@ -16,6 +16,11 @@
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-light" [routerLink]='["/user/me"]'>Your Info</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-light text-bold" href="javascript:void(0)" (click)="logout()">Sign Out
+              &nbsp; <i class="fas fa-sign-out-alt"></i>
+            </a>
           </li>
         </ul>
       </div>
